changes done